# ripgrep-soft

./: .gitignore  CLAUDE.md  Cargo.toml  PERFORMANCE_PLAN.md  PLAN.md  PROJECT_HANDOFF.md  README.md  README_CN.md  SELF_ITERATING_SKILL_PLAN.md  UPGRADE_PLAN.md  WORKFLOW_OPTIMIZATION_PLAN.md
.agents/skills/ripgrep-soft/: SKILL.md
.agents/skills/ripgrep-soft/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/commands/: feature-development.md  refactoring.md  test-driven-development.md
.claude/homunculus/instincts/inherited/: ripgrep-soft-instincts.yaml
.codex/: AGENTS.md
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/quick/006-analyze-project-plan/: 006-PLAN.md  006-SUMMARY.md
.planning/quick/1-rust-everything-ripgrep/: 1-PLAN.md  1-SUMMARY.md
.planning/quick/2-file-index-search/: 2-PLAN.md  2-SUMMARY.md
.planning/quick/3-ntfs-mft-windows/: 3-PLAN.md  3-SUMMARY.md
.planning/quick/4-ripgrep/: 4-PLAN.md  4-SUMMARY.md
.planning/quick/5-fuzzy-rank/: 5-PLAN.md  5-SUMMARY.md
docs/: architecture.puml  component_flow.puml  data_model.puml  domain_model.puml  index_flow.puml  main_flow.puml  project_structure.puml  schema.puml  search_flow.puml  workflow.puml
logs/: app.log.2026-02-23
src/: cli.rs  cli_search.rs  config.rs  error.rs  file_watcher.rs  gui.rs  history.rs  incremental_index.rs  index.rs  lib.rs  logging.rs  main.rs  mft_reader.rs  search.rs  utils.rs
src/gui/: state.rs  ui_components.rs
tests/: integration.rs
