[package]
name = "ripgrep-soft"
version = "0.1.0"
edition = "2021"
description = "A high-performance file and content search tool combining Everything's instant filename search with ripgrep's content matching"
authors = ["ripgrep-soft"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
