[package]
name = "ripgrep-soft"
version = "0.1.0"
edition = "2021"
description = "A high-performance file and content search tool combining Everything's instant filename search with ripgrep's content matching"
authors = ["ripgrep-soft"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
fuzzy-matcher = "0.3"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[profile.release]
opt-level = 3
lto = true
