[package]
name = "turbo-search"
version = "1.0.0"
edition = "2021"
description = "A high-performance file and content search tool for Windows, combining Everything's instant filename search with ripgrep's powerful content matching"
authors = ["TurboSearch Team"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
thiserror = "1.0"
anyhow = "1.0"
regex = "1.10"
fuzzy-matcher = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
dashmap = "5.5"
eframe = "0.33"
rfd = "0.15"
dirs = "5.0"
walkdir = "2.4"
jwalk = "0.6"
ignore = "0.4"
glob = "0.3"
notify = "7.0"
notify-debouncer-mini = "0.5"
rayon = "1.8"
encoding_rs = "0.8"
zip = "2.2"
flate2 = "1.0"
opener = "0.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[profile.release]
opt-level = 3
lto = true
